--- a/holliday/src/app/components/share-bottom-sheet/share-bottom-sheet.component.html
+++ b/holliday/src/app/components/share-bottom-sheet/share-bottom-sheet.component.html
@@ -1,7 +1,7 @@
 <div class="qrcodeImage">
   <!-- todo: definde qrdata at build time -->
   <qrcode
-    [qrdata]="'https://ical-booking-com-dados-inn-lelnokmu7a-ew.a.run.app'"
+    [qrdata]="'https://holliday-dados-inn.web.app/'"
     [allowEmptyString]="true"
     [ariaLabel]="'Share with ...'"
     [cssClass]="'center'"
