--- a/holliday/src/app/components/home/home.component.html
+++ b/holliday/src/app/components/home/home.component.html
@@ -6,7 +6,12 @@
       <mat-icon>share</mat-icon>
     </button>
     <div class="account-login" *ngIf="!(auth.user$ | async); else loggedIn">
-      <button (click)="auth.login()" mat-button aria-label="Log in">
+      <button
+        (click)="auth.login()"
+        mat-button
+        aria-label="Log in"
+        matTooltip="Log in to enable chatting"
+      >
         <mat-icon>account_circle</mat-icon>
       </button>
     </div>
@@ -290,4 +295,9 @@
 </div>
 
 <!-- extra info -->
-<app-chat *ngIf="featureBot"></app-chat>
+<app-chat *ngIf="(auth.user$ | async); else botOffline"></app-chat>
+<ng-template #botOffline>
+  <mat-card>
+    <mat-card-header>Log in to chat</mat-card-header>
+  </mat-card>
+</ng-template>
