--- a/holliday/src/app/components/home/home.component.scss
+++ b/holliday/src/app/components/home/home.component.scss
@@ -138,6 +138,10 @@ mat-card-actions button {
   width: 100%;
 }
 
+.chat-login-header {
+  justify-content: space-evenly;
+  align-items: baseline;
+}
 
 #map {
   height: 500px;
